# mixer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: rig-example.json  s1-mic-speakers.json
src/: aggregate.cpp  aggregate.h  ca_error.cpp  ca_error.h  ca_props.cpp  ca_props.h  config.cpp  config.h  device.cpp  device.h  main.cpp  matrix.cpp  matrix.h  meter.cpp  meter.h  recorder.cpp  recorder.h  router.cpp  router.h
tests/: run_snapshot.cmake
tests/cases/: asymmetric.devs.json  asymmetric.json  bad-json.json  bad-json.snapshot  cue-offset.devs.json  cue-offset.json  minimal-recorder.json  minimal-recorder.snapshot  missing-device.json  missing-device.snapshot  plan-asymmetric.snapshot  plan-cue-offset.snapshot  plan-three-bus.snapshot  self-loop.json  self-loop.snapshot  three-bus.devs.json  valid-three-bus.json  valid-three-bus.snapshot
